Added configuration for Wintersmith v2

--- a/config.json.sample
+++ b/config.json.sample
@@ -3,5 +3,8 @@
 		"url": "http://cdncatalog.net/",
 		"assets": "http://cdncatalog.net/assets",
 		"gaTrackerId": "1234"
-	}
+	},
+    "require": {
+        "_": "underscore"
+    }
 }
